src/objects/MX_RTE_Pedido_RCI__c.object
<CustomObject>
    <description>Objeto para Pedidos de RCI, CCC, IC</description>
    <fields>
        <fullName>MX_RTE_Check_List_M_dulo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo de principal detalle entre Condicionantes y Check List Módulo</description>
        <label>Check List Módulo</label>
        <referenceTo>MX_RTE_Check_List_Modulo__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Condicionantes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Comentarios__c</fullName>
        <description>Se utiliza para redactar información adicional a la solicitud levantada</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Completado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para determinar si el condicionante ya fue completado</description>
        <label>Completado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Descripci_n__c</fullName>
        <description>La descripción de la condicionante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Dias_Retraso__c</fullName>
        <description>Fórmula que arroja los días que se retrasó la entrega real según  la fecha compromiso. Si se entrega antes, el valor será 0.</description>
        <formula>IF(
	(TODAY() - MX_RTE_Fecha_compromiso__c)&lt;0 || (MX_RTE_Fecha_de_cumplimiento__c -MX_RTE_Fecha_compromiso__c) &lt; 0, 
0,
IF(
MX_RTE_Completado__c  = FALSE,
TODAY() - MX_RTE_Fecha_compromiso__c,
	MX_RTE_Fecha_de_cumplimiento__c - MX_RTE_Fecha_compromiso__c
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de retraso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Documento__c</fullName>
        <description>Campo que muestra los tipos de documentos existentes. Es dependiente de catálogo.</description>
        <label>Documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admisión Mercado Abierto</fullName>
                </value>
                <value>
                    <fullName>Comprobantes de y leyendas de Operación</fullName>
                </value>
                <value>
                    <fullName>Creación de ristras contables (subproductos)</fullName>
                </value>
                <value>
                    <fullName>Dictamen MSA</fullName>
                </value>
                <value>
                    <fullName>Envío y tratamiento de información de clientes    </fullName>
                </value>
                <value>
                    <fullName>Externalización de servicios (Proveedores) </fullName>
                </value>
                <value>
                    <fullName>Información de Comisiones</fullName>
                </value>
                <value>
                    <fullName>Leyendas en estados de cuenta</fullName>
                </value>
                <value>
                    <fullName>Modificación de Contratos</fullName>
                </value>
                <value>
                    <fullName>Monitoreo de operaciones </fullName>
                </value>
                <value>
                    <fullName>Opinión o dictamen Jurídico</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Procesos de atención en Linea Bancomer (aclaraciones)</fullName>
                </value>
                <value>
                    <fullName>Pruebas contables</fullName>
                </value>
                <value>
                    <fullName>Pruebas de crédito</fullName>
                </value>
                <value>
                    <fullName>Resguardo en Bóveda electrónica</fullName>
                </value>
                <value>
                    <fullName>Sanción RMC</fullName>
                </value>
                <value>
                    <fullName>Tasas y Rendimientos</fullName>
                </value>
                <value>
                    <fullName>Términos y Condiciones </fullName>
                </value>
                <value>
                    <fullName>Uso de datos personales de clientes </fullName>
                </value>
                <value>
                    <fullName>Uso de nube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Estatus__c</fullName>
        <description>Identifica la etapa del proceso en que se encuentra un registro</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Validación de Documento</fullName>
                </value>
                <value>
                    <fullName>Completado</fullName>
                </value>
                <value>
                    <fullName>Rechazado</fullName>
                </value>
                <value>
                    <fullName>No Procede</fullName>
                    <isActive>false</isActive>
                    <label>No Procede</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Estatus_fx__c</fullName>
        <description>Campo de formula para identificar visualmente la etapa del proceso</description>
        <formula>CASE(TEXT( MX_RTE_Estatus__c),
&quot;Pendiente&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0156C000000Lgas&quot;, &quot;Pedido Pendiente&quot;, 30, 30), 
&quot;Validación de Documento&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=0156C000000Lgai&quot;, &quot;Pedido Validación&quot;, 30, 30),
&quot;Completado&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0156C000000Lgad&quot;, &quot;Pedido Completado&quot;, 30, 30),
&quot;Rechazado&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=0156C000000Lgan&quot;, &quot;Pedido Rechazado&quot;, 30, 30),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_compromiso__c</fullName>
        <description>Fecha en la que se compromete a finalizar las condicionantes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Requerida</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Fecha_de_cumplimiento__c</fullName>
        <description>Fecha real en la que se finalizó la condicionante.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de cumplimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Infraccion__c</fullName>
        <description>Campo de formula tipo imagen que activa a través de una fórmula un semáforo dependiendo de si el campo &quot;días de retraso&quot; lleva igual o más días de retraso.</description>
        <formula>IF( MX_RTE_Dias_Retraso__c &gt; 0, IMAGE(&quot;https://bancomer-retail--wfc--c.cs25.content.force.com/servlet/servlet.ImageServer?id=0151b0000008Rid&amp;oid=00D1b0000008s40&amp;lastMod=1553254868000&quot;, &quot;HAY UN RETRASO EN LA FECHA DE CUMPLIMIENTO RESPECTO A LA FECHA DE COMPROMISO&quot;, 30, 30)
, IMAGE(&quot;https://bancomer-retail--wfc--c.cs25.content.force.com/servlet/servlet.ImageServer?id=0151b0000008UzQ&amp;oid=00D1b0000008s40&amp;lastMod=1554348738000&quot;, &quot;La fecha de cumplimiento aún no supera la fecha de compromiso&quot;, 30, 30)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infracción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Iniciativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para relacionar un pedido con una iniciativa.</description>
        <label>Iniciativa</label>
        <referenceTo>MX_RTE_Iniciativa__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_MVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Se utiliza para obtener la relación de lookup con el objeto MVP</description>
        <label>MVP</label>
        <referenceTo>MX_RTE_Resumen_Ponderacion__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos_RCI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Otro__c</fullName>
        <description>Campo abierto que permite complementar la información.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Otro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Producto__c</fullName>
        <description>Se utiliza por el Rol IC, para identificar a que producto afecta la iniciativa que se presenta</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APPs</fullName>
                </value>
                <value>
                    <fullName>ATM</fullName>
                </value>
                <value>
                    <fullName>BCOM</fullName>
                </value>
                <value>
                    <fullName>BCOM / HIPOTECARIO</fullName>
                </value>
                <value>
                    <fullName>BCOM / INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>BCOM / TDC</fullName>
                </value>
                <value>
                    <fullName>BCOM / VISTA</fullName>
                </value>
                <value>
                    <fullName>BMOVIL</fullName>
                </value>
                <value>
                    <fullName>CLINTBAN</fullName>
                </value>
                <value>
                    <fullName>CONSUMO</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>DATIO</fullName>
                </value>
                <value>
                    <fullName>DIGITAL</fullName>
                </value>
                <value>
                    <fullName>EECC</fullName>
                </value>
                <value>
                    <fullName>GLOMO</fullName>
                </value>
                <value>
                    <fullName>GLOMO / AUTO</fullName>
                </value>
                <value>
                    <fullName>GLOMO / CONSUMO</fullName>
                </value>
                <value>
                    <fullName>GLOMO / INVERSIONES</fullName>
                </value>
                <value>
                    <fullName>GLOMO / TDC</fullName>
                </value>
                <value>
                    <fullName>GLOMO / VISTA</fullName>
                </value>
                <value>
                    <fullName>NOMINA</fullName>
                </value>
                <value>
                    <fullName>PATRIMONIAL</fullName>
                </value>
                <value>
                    <fullName>PYME</fullName>
                </value>
                <value>
                    <fullName>SALES FORCE</fullName>
                </value>
                <value>
                    <fullName>SEGUROS</fullName>
                </value>
                <value>
                    <fullName>TDC</fullName>
                </value>
                <value>
                    <fullName>TPV</fullName>
                </value>
                <value>
                    <fullName>WIBE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Q__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Se indica el Q en el que se hace la solicitud</description>
        <label>Q&apos;s</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Pedidos</relationshipLabel>
        <relationshipName>Pedidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Tipo__c</fullName>
        <description>Tipo de módulo.</description>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Precedente</fullName>
                </value>
                <value>
                    <fullName>Subsecuente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_URL_Documento__c</fullName>
        <description>En caso de que el documento no se cargue de forma local, se agrega un link para consultarlo en drive</description>
        <encryptionScheme>None</encryptionScheme>
        <label>URL Documento</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MX_RTE_area_solicitante__c</fullName>
        <description>Campo que muestra las opciones a elegir entre las condicionantes.</description>
        <label>Área Solicitante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contables</fullName>
                    <isActive>false</isActive>
                    <label>Contables</label>
                </value>
                <value>
                    <fullName>Contrato</fullName>
                    <isActive>false</isActive>
                    <label>Contrato</label>
                </value>
                <value>
                    <fullName>Control de la Operativa</fullName>
                </value>
                <value>
                    <fullName>Cumplimiento</fullName>
                </value>
                <value>
                    <fullName>Dictamen Jurídico</fullName>
                    <isActive>false</isActive>
                    <label>Dictamen Jurídico</label>
                </value>
                <value>
                    <fullName>Finanzas</fullName>
                </value>
                <value>
                    <fullName>Jurídicos </fullName>
                </value>
                <value>
                    <fullName>MSA</fullName>
                    <isActive>false</isActive>
                    <label>MSA</label>
                </value>
                <value>
                    <fullName>Normatividad Institucional</fullName>
                </value>
                <value>
                    <fullName>Normativos</fullName>
                    <isActive>false</isActive>
                    <label>Normativos</label>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                    <isActive>false</isActive>
                    <label>Operaciones</label>
                </value>
                <value>
                    <fullName>Reputacional</fullName>
                </value>
                <value>
                    <fullName>Riesgos de Crédito</fullName>
                </value>
                <value>
                    <fullName>Sistemas</fullName>
                    <isActive>false</isActive>
                    <label>Sistemas</label>
                </value>
                <value>
                    <fullName>Talento y Cultura</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_Fecha_de_Carga__c</fullName>
        <description>Fecha en la que el documento es cargado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Carga</label>
        <type>Date</type>
    </fields>
    <label>Pedido</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_area_solicitante__c</columns>
        <columns>MX_RTE_Documento__c</columns>
        <columns>MX_RTE_Infraccion__c</columns>
        <columns>MX_RTE_Dias_Retraso__c</columns>
        <columns>MX_RTE_Estatus__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>MX_RTE_CCC</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Estatus_fx__c</columns>
        <columns>MX_RTE_Estatus__c</columns>
        <columns>MX_RTE_Descripci_n__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_RTE_Pedido_RCI__c.MX_RTE_CCC</value>
        </filters>
        <label>CCC</label>
        <sharedTo>
            <role>MX_RTE_CCC</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_RTE_Implementacion_Comercial</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Estatus_fx__c</columns>
        <columns>MX_RTE_Estatus__c</columns>
        <columns>MX_RTE_Producto__c</columns>
        <columns>MX_RTE_Descripci_n__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_RTE_Pedido_RCI__c.MX_RTE_IC</value>
        </filters>
        <label>Implementación Comercial</label>
        <sharedTo>
            <role>MX_RTE_Implementacion_Comercial</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MX_RTE_RCI</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_area_solicitante__c</columns>
        <columns>MX_RTE_Estatus_fx__c</columns>
        <columns>MX_RTE_Documento__c</columns>
        <columns>MX_RTE_Infraccion__c</columns>
        <columns>MX_RTE_Dias_Retraso__c</columns>
        <columns>MX_RTE_Estatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MX_RTE_Pedido_RCI__c.MX_RTE_RCI</value>
        </filters>
        <label>RCA</label>
        <sharedTo>
            <role>MX_RTE_RCI</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <recordTypes>
        <fullName>MX_RTE_CCC</fullName>
        <active>true</active>
            <description>Captura de Pedidos por parte del rol CCC</description>
        <label>CCC</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_RTE_IC</fullName>
        <active>true</active>
        <description>Captura de Pedidos por parte del rol IC</description>
        <label>IC</label>
    </recordTypes>
    <recordTypes>
        <fullName>MX_RTE_RCI</fullName>
        <active>true</active>
        <description>Captura de Pedidos por parte del rol RCA</description>
        <label>RCA</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>